// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) hide_var LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "hide_var",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) call_after_init LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 1,
  "name": "call_after_init",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) warning_message LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 0,
  "name": "warning_message",
  "tcErrors": 0,
  "tcWarnings": 1,
}
`;

exports[`language conformance: pragmas (LSP vs recorded TwinCAT) unknown_attribute_typo LSP diagnostics agree with TwinCAT 1`] = `
{
  "agreementOnPassFail": true,
  "lspErrors": 0,
  "lspWarnings": 1,
  "name": "unknown_attribute_typo",
  "tcErrors": 0,
  "tcWarnings": 0,
}
`;
